--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,11 +7,17 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  jest-tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Install modules
         run: yarn
       - name: Run tests
-        run: yarn jest
+        run: yarn jest --json --outputFile="jest.results.json"
+      - uses: mattallty/jest-github-action@v1.0.3
+        if: github.event_name == 'pull_request'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          changes-only: true
