--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,11 @@ name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
 
 jobs:
   jest-tests:
@@ -14,10 +16,8 @@ jobs:
       - name: Install modules
         run: yarn
       - name: Run tests
-        run: yarn jest --json --outputFile="jest.results.json"
-      - uses: mattallty/jest-github-action@v1.0.3
-        if: github.event_name == 'pull_request'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: yarn jest --json --outputFile=jest.results.json
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
         with:
-          changes-only: true
+          token: ${{ secrets.CODECOV_TOKEN }}
