--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "babel-jest": "^26.6.0",
     "jest": "^26.6.0"
   },
-  "dependencies": {
-    "@jest/globals": "^26.6.0"
+  "scripts": {
+    "test": "jest"
+  },
+  "jest": {
+    "collectCoverage": true
   }
 }
